[package]
name = "sylph"
version = "0.1.0"
authors = ["Dan Davison <dandavison7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["templates", "tera_templates"]