[package]
name = "sylph"
version = "0.1.0"
authors = ["Dan Davison <dandavison7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", default-features = false, features = ["serve"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
structopt = "0.3.21"